<resources>
    <string name="app_name">JDR Android Java</string>
    <string name="number_items">Nombre d\'objets</string>
    <string name="size_items">Encombrement</string>
    <string name="add_character">Ajouter un personnage</string>
    <string name="update_character">Modifier un personnage</string>
    <string name="delete_character">Voulez vous supprimer le personnage ?</string>
    <string name="name_character">Nom</string>
    <string name="size_character">Nombre d\'emplacement</string>
    <string name="add">Ajouter</string>
    <string name="update">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="cancel">Annuler</string>
    <string name="question">?</string>
    <string name="confirm_common">Le personnage</string>
    <string name="confirm_common_item">L\'objet</string>
    <string name="confirm_add">est bien ajouté !</string>
    <string name="confirm_update">est bien modifié !</string>
    <string name="confirm_delete">est bien supprimé !</string>
    <string name="input_error_character_name">Le nom ne peut pas être vide</string>
    <string name="input_error_character_hasSame_name">Un personnage porte déjà ce nom</string>
    <string name="input_error_character_size">Le nombre ne peut pas être vide ou égale à 0</string>
    <string name="input_error_character_size_too_low">Le personnage contient trop d\'objet</string>
    <string name="input_error_character_size_too_big">Le personnage contient plus d\objet que cette taille</string>
    <string name="delete_item">Voulez vous supprimer</string>
    <string name="order_alphabet">A</string>
    <string name="item_nodata">Ce personnage n\'a aucun objet</string>
    <string name="item_too_big">L\'objet prend trop de place</string>
    <string name="item_add">L\'objet est ajouté !</string>
    <string name="item_name">Nom requis, sans caractères speciaux!</string>
    <string name="item_size_required">Encombrement requis!</string>
    <string name="item_add_button">Ajouter</string>
    <string name="item_nom">Nom</string>
    <string name="item_description">Description</string>
    <string name="item_size">Taille</string>
    <string name="update_item">Modifier</string>
    <string name="item_updated">L\'objet à été mis à jour!</string>
    <string name="item_button_update">Sauvegarder</string>
    <string name="add_image">Importer une image</string>

</resources>