<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/title_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_character"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/title_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/update_character"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/title_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/delete_character"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/update_add_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/preview_character_image"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                tools:srcCompat="@tools:sample/avatars"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="10dp"/>


            <Button
                android:id="@+id/add_character_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/interaction"
                android:text="@string/add_image"
                android:visibility="visible" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameInputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_character"
                    android:inputType="textShortMessage"
                    android:lines="1"
                    android:maxLength="10"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sizeInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sizeInputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/size_character"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/delete_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/cancel_character"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/interaction"
                        android:text="@string/cancel"
                        android:layout_alignParentLeft="true"/>

                    <Button
                        android:id="@+id/delete_character"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/interaction"
                        android:text="@string/delete"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/update_add_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:visibility="visible">
        <Button
            android:id="@+id/add_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/interaction"
            android:text="@string/add"
            android:visibility="visible" />

        <Button
            android:id="@+id/update_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/interaction"
            android:text="@string/update"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>