<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ItemActivity"
    android:padding="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/item_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addItem"
            android:text="@string/item_add_button"
            app:backgroundTint="@color/teal_200"
            tools:text="@string/item_add_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>

        <Button
            android:id="@+id/item_validate_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updateItem"
            android:text="@string/item_button_update"
            android:visibility="gone"
            app:backgroundTint="@color/teal_200"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/important"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789-éèàôöüïâêùî "
                android:hint="@string/item_nom"
                android:textColor="@color/black"
                android:lines="1"
                android:maxLength="10"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/important"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/white"
                android:gravity="top"
                android:hint="@string/item_description"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/important">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/item_size"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>